# clang-mc

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPILATION_SUCCESS.md  Cargo.toml  LICENSE  README.md  README_CN.md  THIRD_PARTY_LICENSES.md  build.cmd  pack.mcmeta  test-global.ll  test-simple.ll  test-store.ll  test_mov_add.ll  test_simple.c  test_simple.ll  xmake.lua
.cargo/: config.toml
.github/workflows/: build.yml
.run/: clang-mc.run.xml
clang/lib/Basic/: CMakeLists.txt  Targets.cpp
clang/lib/Basic/Targets/: Mcasm.cpp  Mcasm.h
data/minecraft/tags/functions/: load.json
data/std/function/: __init__.mcfunction  alloc_str.mcfunction  free_str.mcfunction  get_item_translation_key.mcfunction
data/std/function/_internal/: alloc_str.mcfunction  equals_const.mcfunction  exec.mcfunction  find.mcfunction  free_str.mcfunction  get_length.mcfunction  merge_string.mcfunction  merge_string2.mcfunction  pop.mcfunction  pop_ignore.mcfunction  print.mcfunction  print_string.mcfunction  shrink_heap.mcfunction  store_stack.mcfunction  substring.mcfunction  to_char.mcfunction
data/std/function/heap/: expand.mcfunction  shrink.mcfunction
data/std/function/stack/: load.mcfunction  peek_r1.mcfunction  peek_r3.mcfunction  peek_rax.mcfunction  peek_rsp.mcfunction  peek_t1.mcfunction  peek_t3.mcfunction  pop_ignore.mcfunction  pop_r0.mcfunction  pop_r1.mcfunction  push_r0.mcfunction  push_r1.mcfunction  push_r2.mcfunction  push_r3.mcfunction  push_rax.mcfunction  store.mcfunction
data/std/function/string/: alloc_str.mcfunction  char_at.mcfunction  find.mcfunction  get_length.mcfunction  merge_string.mcfunction  print.mcfunction  substring.mcfunction  to_char.mcfunction
data/std/function/test/: test_translation_key.mcfunction
include/: UnorderedDense.h  UnorderedDenseWrapper.h  uuidWrapper.h
llvm/: CMakeLists.txt
llvm/include/llvm/TargetParser/: Triple.h
llvm/lib/IR/: DataLayout.cpp
llvm/lib/TargetParser/: Triple.cpp
llvm/lib/TargetParser/Windows/: Host.inc
llvm/llvm/: CMakeLists.txt
llvm/llvm/tools/llc/: llc.cpp
llvm/tools/llc/: llc.cpp
scripts/: asciiGenerator.py  fuckAscii.py  stackGenerator.py
src/builder/: main.py  setup.py
src/cpp/: ClangMc.cpp  ClangMc.h  Main.cpp  Main.h  Start.c  main.cpp
src/cpp/builder/: Builder.cpp  Builder.h  PostOptimizer.cpp  PostOptimizer.h
src/cpp/config/: ArgParser.cpp  ArgParser.h  Config.h
src/cpp/i18n/: I18n.cpp  I18n.h  I18nTemplate.h  LogFormatter.h
src/cpp/ir/: IR.cpp  IR.h  IRCommon.cpp  IRCommon.h  OpCommon.cpp  OpCommon.h  State.h
src/cpp/ir/controlFlow/: JmpTable.cpp  JmpTable.h
src/cpp/ir/iops/: CallLike.h  CmpLike.h  JmpLike.h  Op.h  Special.h
src/cpp/ir/objects/: Int.h
src/cpp/ir/ops/: Add.h  Call.h  CallLike.h  Calld.h  CmpLike.h  Div.h  Inline.h  Je.h  Jg.h  Jge.h  Jl.h  Jle.h  Jmp.h  JmpLike.h  Jne.h  Label.h  Mov.h  Movd.h  Mul.h  Nop.h  Op.h  OpCommon.cpp  OpCommon.h  Peek.h  Pop.h  Push.h  Ret.h  Static.h  Sub.h  Syscall.h
src/cpp/ir/values/: HeapPtr.h  Immediate.h  Ptr.h  Register.h  StackPtr.h  Symbol.h  SymbolPtr.h  Value.h
src/cpp/ir/verify/: Verifier.cpp  Verifier.h  VerifyResult.h
src/cpp/llvm/: LlvmMachine.cpp  LlvmMachine.h
src/cpp/objects/: Int.h  LogFormatter.h  MatrixStack.h  NameGenerator.h
src/cpp/objects/include/: UnorderedDense.h
src/cpp/parse/: ParseManager.cpp  ParseManager.h  PreProcessor.cpp  PreProcessor.h
src/cpp/patches/fmt/: core.h
src/cpp/utils/: CLIUtils.cpp  CLIUtils.h  Common.h  CommonC.h  FileUtils.h  Helper.h  NameGenerator.h  Native.c  Native.h  OOMHandler.h  Stacktrace.h  Stream.h  StringUtils.h
src/cpp/utils/include/: UnorderedDense.h
src/cpp/utils/string/: StringBuilder.h  StringUtils.h
src/mcasm/: int.mcasm  int.mch  malloc.mcasm  memory.mcasm  memory.mch  stdlib.mcasm  stdlibImpl.mcasm  string.mcasm  string.mch
src/python/: build_assets.py
src/python/internal/: Const.py  FileUtils.py  __init__.py
src/resources/: build_compiler-rt.sh
src/resources/assets/include/: stdlib.mcasm
src/resources/compiler-rt/: adddi3.c  int_lib.h  subdi3.c  udivsi3.c
src/resources/include/: _ll_crt.mch  _ll_libc.mch  _ll_std.mch  event.mch  int.mch  int64.mch  mcfp.mch  memory.mch  screen.mch  stdio.mch  stdlib.mcasm  stdlib.mch  string.mch  syscall.mch
src/resources/include/compiler_rt/: adddf3.mch  adddi3.mch  addsf3.mch  ashldi3.mch  ashrdi3.mch  bits.mch  comparedf2.mch  comparesf2.mch  divdf3.mch  divdi3.mch  divsf3.mch  extendsfdf2.mch  fixdfsi.mch  fixsfsi.mch  floatsidf.mch  floatsisf.mch  floatunsidf.mch  lshrdi3.mch  muldf3.mch  (+11 more)
src/resources/lang/: EN_US.yaml  ZH_CN.yaml
src/resources/libc/: README.md
src/resources/libmc/: README.md  minecraft.h  types.h
src/rust/: lib.rs
src/rust/native/: native.rs
src/rust/objects/: matrix_stack.rs  mod.rs  source_line_builder.rs
src/rust/parse/: mod.rs  pre_processer.rs  pre_processer_api.rs
tests/: README.md  run_datapack_tests.py
tests/cases/: float_arith.c  float_format.c  float_ieee754_sum.c  function_pointer_basic.c  function_pointer_direct.c  gcvt_fast_scientific_probe.c  global_asm_macro_helper_probe.c  libc_free_adjacent_probe.c  libc_mcstr_quote_scratch_probe.c  libc_printf.c  libc_snprintf_target_corrupt_probe.c  libmc_float_after_summon_tp_repro.c  libmc_header_smoke.c  libmc_mcf_numeric_probe.c  libmc_mcf_quote_probe.c  libmc_mcf_release_probe.c  libmc_mcf_slot_probe.c  libmc_say_only.c  libmc_say_trace.c  libmc_setblock_fill.c  libmc_string_release_probe.c  libmc_summon_only.c  libmc_summon_tp.c  libmc_summon_tp_alloc_trace.c  libmc_summon_tp_rot_only_combo.c  libmc_summon_tp_trace.c  libmc_summon_unsafe_probe.c  libmc_target_chat.c  libmc_target_mcf_after_numeric_release.c  libmc_tellraw_players_only.c  libmc_tellraw_raw_only.c  libmc_tellraw_with_prior_msg.c  libmc_tp_only.c  libmc_tp_rot_only.c  libmc_tp_then_tp_rot_combo.c  loop_mix.c  macro_arg_mutation_probe.c  macro_inline_storage_probe.c  mcf_slot_matrix_repro.c  mcstr_alloc_ids_repro.c  (+5 more)
tools/commands/: README.md
tools/commands/generator/: generate.py
tools/commands/schema/: stage1_commands.json
(+249 files in other folders)
